Fix DirectiveDescriptorTest: use Arrays.asList for null-containing list
List.of() rejects null elements; Arrays.asList() allows them, which is
what the normalizeAliases null-filtering logic needs to be tested with.

https://claude.ai/code/session_01R9pRC5wksJVXNUt9Df9vSd